<resources>
    <string name="app_name">CB News</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="ph_review_location">Anonymous user from %1$s comment on</string>
    <string name="vertical_ellipsis" translatable="false">&#8942;</string>
    <!--navigation drawer-->
    <string name="nav_latest_news">Latest news</string>
    <string name="nav_top_comments">Top comments</string>
    <string name="nav_past_headlines">Past headlines</string>
    <string name="nav_my_topics">My myTopics</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_all_topics">All topics</string>
    <string name="nav_quick_entry">Quick entry</string>
    <string name="nav_download">Download</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_exit">Switch theme</string>
    <!--scroll behavior-->
    <string name="behavior_fab" translatable="false">cn.j1angvei.cbnews.animation.ScrollAwareFABBehavior</string>
    <string name="behavior_fab_up_down" translatable="false">cn.j1angvei.cbnews.animation.ScrollAwareFABUpDownBehavior</string>
    <string name="behavior_appbar_layout" translatable="false">cn.j1angvei.cbnews.animation.AppBarLayoutScrollableBehavior</string>
    <!--news summary-->
    <string name="topic_thumb" translatable="false">Topic thumb</string>
    <string name="ph_news_content_header">Pubtime: %1$s    Source: %2$s </string>
    <string name="ph_news_content_detail" translatable="false"><![CDATA[<html><head><meta name="viewport" summary="width=device-width,user-scalable=no"></head><body style="text-align:justify">%1$s</body></html>]]></string>
    <string name="ph_bookmark_time">Bookmarked at %1$s</string>
    <string name="title_activity_content">Article Content</string>
    <string name="menu_open_in_mobile_site">Open in mobile site</string>
    <string name="menu_open_in_pc_site">Open in PC site</string>
    <!--bookmarks news-->
    <string name="menu_mini_card">Mini card</string>
    <string name="menu_all_comments">All comments</string>
    <string name="menu_add_comment">Add comment</string>
    <string name="menu_bookmark_this_article">Bookmark this</string>
    <string name="menu_share_this_article">Share this</string>
    <!--comment-->
    <string name="cmt_header">%1$s from %2$s</string>
    <string name="cmt_time">Post at %1$s</string>
    <string name="cmt_action_up_vote">Support (%1$s) </string>
    <string name="cmt_action_down_vote">Against (%1$s) </string>
    <string name="title_activity_comments">Comments</string>
    <string name="action_comment_reply">Reply</string>
    <string name="action_comment_report">Report</string>
    <string name="menu_comment_ordered_by_time">Ordered by time</string>
    <string name="menu_comment_switch">Popular comments</string>
    <!--info-->
    <string name="info_get_captcha_fail">Fail to load captcha</string>
    <string name="info_connection_error">Connection error!</string>
    <string name="info_retry">Retry</string>
    <string name="info_need_wifi_env">Wifi connection needed!</string>
    <string name="info_cmt_success">Judge comment success!</string>
    <string name="info_cmt_fail">Judge comment fail!</string>
    <string name="info_my_topics_empty">No myTopics added!</string>
    <string name="info_add_my_topic_success">Add to my topics success!</string>
    <string name="info_add_to_bookmark_success">Add to bookmark success!</string>
    <string name="info_add_my_topic_fail">Add to my topics fail!</string>
    <string name="info_press_to_exit">Press again to exit</string>
    <string name="info_comment_closed">Comment function closed!</string>
    <string name="info_news_content_retrieving">News content retrieving</string>
    <!--add comment-->
    <string name="header_publish_cmt_news_title">News title</string>
    <string name="header_publish_cmt_origin_cmt">Original comment</string>
    <string name="publish_comment_captcha">Captcha</string>
    <string name="publish_cmt_reference_comment">Reference comment</string>
    <string name="publish_cmt_your_comment">Your comment</string>
    <!--my myTopics-->
    <string name="hint_add_my_topic">You haven\'t add any topic\nClick \'+\' to add</string>
    <!--error-->
    <string name="error_generic">Unknown error happened!</string>
    <string name="error_no_network">No network connection!</string>
    <string name="error_no_cache_found">No local item found, swipe to refresh!</string>
    <string name="error_json_parse_fail">Json response parse error!</string>
    <string name="error_response_parse_fail">Response body parse string error!</string>
    <string name="error_no_comment">No comment input!</string>
    <string name="error_no_captcha">No captcha input!</string>
    <string name="error_wrong_captcha">Wrong captcha!</string>
    <string name="error_no_more_data">No more data!</string>
    <string name="error_no_data">No data found!</string>
    <string name="error_no_item_in_ram">No item in memory!</string>
    <!--hint-->
    <string name="hint_input_comment">Input comment</string>
    <string name="hint_input_captcha">Input captcha</string>
    <!--label-->
    <string name="label_all_comments">All comments: %1$s </string>
    <string name="label_all_comments_no">All comments: empty</string>
    <string name="label_popular_comments">Popular comments: %1$s</string>
    <string name="label_popular_comments_no">Popular comments: empty</string>
    <!--place holder-->
    <!--toolbar title-->
    <string name="title_publish_cmt">Publish comment</string>
    <string name="title_reply_cmt">Reply comment</string>
    <string name="title_add_my_topic">Add topic</string>
    <string name="title_select_topic">Select topics</string>
    <!--action-->
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_drop">Drop</string>
    <string name="action_reset">Reset</string>
    <string name="title_choose_letter">Choose letter</string>
    <!--settings-->
    <string-array name="pref_title_offline_dl_list">
        <item>@string/nav_latest_news</item>
        <item>@string/nav_past_headlines</item>
        <item>@string/nav_top_comments</item>
        <item>@string/nav_my_topics</item>
    </string-array>
    <string-array name="pref_value_offline_dl" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="set_basic_settings">Basic settings</string>
    <string name="set_load_img_always">Load image always</string>
    <string name="set_load_img_wifi">Load image only in WiFi</string>
    <string name="set_save_data_mode">Save data mode</string>
    <string name="set_night_mode">Night mode</string>
    <string name="set_auto_switch_theme">Auto switch theme</string>
    <string name="set_enable_auto_switch">Enable auto switch</string>
    <string name="set_enable_cmt_tail">Enable comment tail</string>
    <string name="set_default_tail">\"Send from CB News \"</string>
    <string name="set_custom_cmt_tail">Customize comment tail</string>
    <string name="set_cmt_tail">Comment tail</string>
    <string name="set_load_news_manually">Load latest news manually</string>
    <string name="set_load_news_start">Load latest news on start</string>
    <string name="set_auto_load">Auto load</string>
    <string name="set_storage_settings">Storage settings</string>
    <string name="set_choose_download_source">Choose news types to download</string>
    <string name="set_clear_caches">Clear caches</string>
    <string name="set_version_about">Version and About</string>
    <string name="set_current_version">Current version</string>
    <string name="set_about_author">About author</string>
    <string name="set_author_name">j1angvei</string>
    <string name="set_disclaimer">Disclaimer</string>
    <string name="set_offline_download">Offline download</string>
    <string name="set_cache_size">Cache size</string>
    <string name="set_disclaimer_info">All data are retrieved from www.cnbeta.com, and its copyright belongs to the author</string>
    <!--Debug use-->
    <string name="line_3" translatable="false">This is line 1\n This is line 2\n This is line 3</string>
    <string name="title_cache_news">Caching news.</string>
    <string name="ph_download_progress">Download in progress, %1$s %2$s…</string>
    <string name="info_download_complete">Download complete!</string>
    <string name="title_cache_complete">Cache complete</string>
    <string name="info_all_data_cached">all data are cached locally</string>
    <string name="error_cache_fail">Download failure!</string>
    <string name="set_download_page">Download pages</string>
    <string name="set_download_default_page">default: 2</string>
    <!--share-->
    <string name="title_share_news_to">Share news to …</string>
</resources>
