<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/news_section"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_latest_news"
            android:checked="true"
            android:icon="@drawable/ic_nav_latest_news"
            android:title="@string/nav_latest_news"/>

        <item
            android:id="@+id/nav_past_headlines"
            android:icon="@drawable/ic_nav_past_headlines"
            android:title="@string/nav_past_headlines"/>
        <item
            android:id="@+id/nav_hot_news_comment"
            android:icon="@drawable/ic_nav_hot_news"
            android:title="@string/nav_top_comments"/>
        <item
            android:id="@+id/nav_all_topic"
            android:icon="@drawable/ic_nav_explore"
            android:title="@string/nav_all_topics"/>
    </group>
    <group
        android:id="@+id/user_block"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_topics"
            android:icon="@drawable/ic_nav_my_topics"
            android:title="@string/nav_my_topics"/>
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_nav_bookmarks"
            android:title="@string/nav_bookmarks"/>
    </group>
    <group
        android:id="@+id/quick_entry"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/nav_download"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_nav_exit"
            android:title="@string/nav_exit"/>
    </group>
</menu>