<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_content_add_comment"
        android:icon="@drawable/ic_add_white"
        android:title="@string/menu_add_comment"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_content_all_comments"
        android:icon="@drawable/ic_message_white"
        android:title="@string/menu_all_comments"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_content_bookmark"
        android:icon="@drawable/ic_star_border_white"
        android:title="@string/menu_bookmark_this_article"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_content_share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/menu_share_this_article"
        app:showAsAction="never"/>

</menu>