<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_content_share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/menu_share_this_article"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_content_bookmark"
        android:icon="@drawable/ic_star_border_white"
        android:title="@string/menu_bookmark_this_article"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_content_open_mobile"
        android:icon="@drawable/ic_phone_iphone_white_24dp"
        android:title="@string/menu_open_in_mobile_site"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_content_open_pc"
        android:icon="@drawable/ic_laptop_windows_white_24dp"
        android:title="@string/menu_open_in_pc_site"
        app:showAsAction="never"/>
</menu>