<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="@dimen/dialog_margin_horz">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_publish_cmt_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/header_publish_cmt_news_title">

        <android.support.design.widget.TextInputEditText

            android:id="@+id/tv_publish_cmt_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_publish_cmt_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_publish_cmt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_comment"
            android:imeOptions="actionSend"
            android:inputType="textMultiLine"
            android:lineSpacingMultiplier="1.2"
            android:maxLines="5"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_publish_cmt_captcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_captcha"
                android:inputType="textCapCharacters"
                android:lines="1"
                android:maxLength="4"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/iv_publish_cmt_captcha"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/fake_captcha"/>

            <include layout="@layout/include_progress_bar_small"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
